--- a/MvvmTools.Web/Views/Account/ResetPasswordConfirmation.cshtml
+++ b/MvvmTools.Web/Views/Account/ResetPasswordConfirmation.cshtml
@@ -2,11 +2,16 @@
     ViewBag.Title = "Reset password confirmation";
 }
 
-<hgroup class="title">
-    <h1>@ViewBag.Title.</h1>
-</hgroup>
-<div>
-    <p>
-        Your password has been reset. Please @Html.ActionLink("click here to log in", "Login", "Account", routeValues: null, htmlAttributes: new { id = "loginLink" })
-    </p>
+<div class="pageheader">
+    <hgroup class="title">
+        <h1>@ViewBag.Title.</h1>
+    </hgroup>
 </div>
+
+<section id="main-content">
+    <div>
+        <p>
+            Your password has been reset. Please click @Html.ActionLink("here", "Login", "Account", routeValues: null, htmlAttributes: new { id = "loginLink" }) to log in.
+        </p>
+    </div>
+</section>
