--- a/MvvmTools.Web/Views/Shared/_LeftSideBar.cshtml
+++ b/MvvmTools.Web/Views/Shared/_LeftSideBar.cshtml
@@ -65,7 +65,7 @@
                             </li>
                             <li class="@Html.IsSelected(action: "MyIndex")">
                                 <a href="@Url.Action("MyIndex", "MvvmTemplates")">
-                                    My Shared Templates
+                                    My Templates
                                 </a>
                             </li>
                         </ul>
