--- a/MvvmTools.Web/Views/Account/ExternalLoginFailure.cshtml
+++ b/MvvmTools.Web/Views/Account/ExternalLoginFailure.cshtml
@@ -2,7 +2,9 @@
     ViewBag.Title = "Login Failure";
 }
 
-<hgroup>
-    <h2>@ViewBag.Title.</h2>
-    <h3 class="text-danger">Unsuccessful login with service.</h3>
-</hgroup>
+<div class="pageheader">
+    <hgroup>
+        <h1>@ViewBag.Title.</h1>
+        <h2 class="text-danger">Unsuccessful login with service.</h2>
+    </hgroup>
+</div>
