--- a/MvvmTools.Web/Views/Account/ForgotPasswordConfirmation.cshtml
+++ b/MvvmTools.Web/Views/Account/ForgotPasswordConfirmation.cshtml
@@ -1,13 +1,14 @@
 ﻿@{
     ViewBag.Title = "Forgot Password Confirmation";
 }
-
-<hgroup class="title">
-    <h1>@ViewBag.Title.</h1>
-</hgroup>
-<div>
-    <p>
-        Please check your email to reset your password.
-    </p>
+<div class="pageheader">
+    <hgroup class="title">
+        <h1>@ViewBag.Title</h1>
+    </hgroup>
+    <div>
+        <p>
+            Please check your email to reset your password.
+        </p>
+    </div>
 </div>
-	
+
