--- a/MvvmTools.Web/Views/Account/SendCode.cshtml
+++ b/MvvmTools.Web/Views/Account/SendCode.cshtml
@@ -3,22 +3,26 @@
     ViewBag.Title = "Send";
 }
 
-<h2>@ViewBag.Title.</h2>
+<div class="pageheader">
+    <h1>@ViewBag.Title</h1>
+</div>
 
-@using (Html.BeginForm("SendCode", "Account", new { ReturnUrl = Model.ReturnUrl }, FormMethod.Post, new { @class = "form-horizontal", role = "form" })) {
-    @Html.AntiForgeryToken()
-    @Html.Hidden("rememberMe", @Model.RememberMe)
-    <h4>Send verification code</h4>
-    <hr />
-    <div class="row">
-        <div class="col-md-8">
-            Select Two-Factor Authentication Provider:
-            @Html.DropDownListFor(model => model.SelectedProvider, Model.Providers)
-            <input type="submit" value="Submit" class="btn btn-default" />
+<section id="main-content">
+    @using (Html.BeginForm("SendCode", "Account", new { ReturnUrl = Model.ReturnUrl }, FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
+    {
+        @Html.AntiForgeryToken()
+        @Html.Hidden("rememberMe", @Model.RememberMe)
+        <h4>Send verification code</h4>
+        <hr />
+        <div class="row">
+            <div class="col-md-8">
+                Select Two-Factor Authentication Provider:
+                @Html.DropDownListFor(model => model.SelectedProvider, Model.Providers)
+                <input type="submit" value="Submit" class="btn btn-default" />
+            </div>
         </div>
-    </div>
-}
-
-@section Scripts {
-    @Scripts.Render("~/bundles/jqueryval")
-}
+    }
+</section>
+    @section Scripts {
+        @Scripts.Render("~/bundles/jqueryval")
+    }
