--- a/MvvmTools.Web/Views/MvvmTemplates/Details.cshtml
+++ b/MvvmTools.Web/Views/MvvmTemplates/Details.cshtml
@@ -1,66 +1,67 @@
 ﻿@model MvvmTools.Web.Models.MvvmTemplate
 
 @{
-    ViewBag.Title = "Details";
+    ViewBag.Title = "Template Details";
 }
 
-<h2>Details</h2>
-
-<div>
-    <h4>MvvmTemplate</h4>
-    <hr />
-    <dl class="dl-horizontal">
-        <dt>
-            @Html.DisplayNameFor(model => model.Name)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.Name)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.Language)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.Language)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.MvvmTemplateCategoryId)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.MvvmTemplateCategoryId)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.Tags)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.Tags)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.ViewModel)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.ViewModel)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.View)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.View)
-        </dd>
-
-    </dl>
+<div class="pageheader">
+    <h1>@ViewBag.Title</h1>
 </div>
-<p>
-    @Html.ActionLink("Edit", "Edit", new { id = Model.Id }) |
-    @Html.ActionLink("Back to List", "Index")
-</p>
+
+<section id="main-content">
+    <div>
+        <dl class="dl-horizontal">
+            <dt>
+                @Html.DisplayNameFor(model => model.Name)
+            </dt>
+
+            <dd>
+                @Html.DisplayFor(model => model.Name)
+            </dd>
+
+            <dt>
+                @Html.DisplayNameFor(model => model.Language)
+            </dt>
+
+            <dd>
+                @Html.DisplayFor(model => model.Language)
+            </dd>
+
+            <dt>
+                @Html.DisplayNameFor(model => model.MvvmTemplateCategory.Name)
+            </dt>
+
+            <dd>
+                @Html.DisplayFor(model => model.MvvmTemplateCategory.Name)
+            </dd>
+
+            <dt>
+                @Html.DisplayNameFor(model => model.Tags)
+            </dt>
+
+            <dd>
+                @Html.DisplayFor(model => model.Tags)
+            </dd>
+
+            <dt>
+                @Html.DisplayNameFor(model => model.ViewModel)
+            </dt>
+
+            <dd>
+                @Html.DisplayFor(model => model.ViewModel)
+            </dd>
+
+            <dt>
+                @Html.DisplayNameFor(model => model.View)
+            </dt>
+
+            <dd>
+                @Html.DisplayFor(model => model.View)
+            </dd>
+
+        </dl>
+    </div>
+    <p>
+        <button class="btn btn-default" onclick="window.history.back();">Back to List</button>
+    </p>
+</section>
