Implemented logout, removed the MyIndex.cshtml, and improved the edit/create/detail pages.

--- a/MvvmTools.Web/Views/MvvmTemplates/Edit.cshtml
+++ b/MvvmTools.Web/Views/MvvmTemplates/Edit.cshtml
@@ -78,7 +78,7 @@
             <div class="form-group">
                 <div class="col-md-offset-2 col-md-10">
                     <input type="submit" value="Save" class="btn btn-default" style="margin-right: 5px;"/>
-                    <button class="btn btn-default" onclick="window.history.back();">Cancel</button>
+                    <button class="btn" onclick="window.history.back();">Cancel</button>
                 </div>
             </div>
         </div>
