--- a/MvvmTools.Web/Views/MvvmTemplates/Create.cshtml
+++ b/MvvmTools.Web/Views/MvvmTemplates/Create.cshtml
@@ -1,7 +1,7 @@
-﻿@model MvvmTools.Web.Models.MvvmTemplate
+﻿@model MvvmTools.Web.Models.TemplateCreateViewModel
 
 @{
-    ViewBag.Title = "Create Template";
+    ViewBag.Title = "New Template";
 }
 
 <div class="pageheader">
@@ -14,68 +14,73 @@
         @Html.AntiForgeryToken()
 
         <div class="form-horizontal">
-            <h4>MvvmTemplate</h4>
-            <hr />
             @Html.ValidationSummary(true, "", new { @class = "text-danger" })
             <div class="form-group">
-                @Html.LabelFor(model => model.Name, htmlAttributes: new { @class = "control-label col-md-2" })
+                @Html.LabelFor(model => model.Enabled, htmlAttributes: new { @class = "control-label col-md-2" })
                 <div class="col-md-10">
-                    @Html.EditorFor(model => model.Name, new { htmlAttributes = new { @class = "form-control" } })
-                    @Html.ValidationMessageFor(model => model.Name, "", new { @class = "text-danger" })
+                    @Html.CheckBoxFor(model => model.Enabled, new { htmlAttributes = new { @class = "form-control" } })
+                    @Html.ValidationMessageFor(model => model.Enabled, "", new { @class = "text-danger" })
+                </div>
+            </div>
+
+
+            @Html.ValidationSummary(true, "", new {@class = "text-danger"})
+            <div class="form-group">
+                @Html.LabelFor(model => model.Name, htmlAttributes: new {@class = "control-label col-md-2"})
+                <div class="col-md-10">
+                    @Html.EditorFor(model => model.Name, new {htmlAttributes = new {@class = "form-control"}})
+                    @Html.ValidationMessageFor(model => model.Name, "", new {@class = "text-danger"})
                 </div>
             </div>
 
             <div class="form-group">
-                @Html.LabelFor(model => model.Language, htmlAttributes: new { @class = "control-label col-md-2" })
+                @Html.LabelFor(model => model.Language, htmlAttributes: new {@class = "control-label col-md-2"})
                 <div class="col-md-10">
-                    @Html.EditorFor(model => model.Language, new { htmlAttributes = new { @class = "form-control" } })
-                    @Html.ValidationMessageFor(model => model.Language, "", new { @class = "text-danger" })
+                    @Html.DropDownListFor(model => model.Language, @Model.Languages, new {htmlAttributes = new {@class = "form-control"}})
+                    @Html.ValidationMessageFor(model => model.Language, "", new {@class = "text-danger"})
                 </div>
             </div>
 
             <div class="form-group">
-                @Html.LabelFor(model => model.MvvmTemplateCategoryId, htmlAttributes: new { @class = "control-label col-md-2" })
+                @Html.LabelFor(model => model.MvvmTemplateCategoryId, htmlAttributes: new {@class = "control-label col-md-2"})
                 <div class="col-md-10">
-                    @Html.EditorFor(model => model.MvvmTemplateCategoryId, new { htmlAttributes = new { @class = "form-control" } })
-                    @Html.ValidationMessageFor(model => model.MvvmTemplateCategoryId, "", new { @class = "text-danger" })
+                    @Html.DropDownListFor(model => model.MvvmTemplateCategoryId, @Model.Categories, new {htmlAttributes = new {@class = "form-control"}})
+                    @Html.ValidationMessageFor(model => model.MvvmTemplateCategoryId, "", new {@class = "text-danger"})
                 </div>
             </div>
 
             <div class="form-group">
-                @Html.LabelFor(model => model.Tags, htmlAttributes: new { @class = "control-label col-md-2" })
+                @Html.LabelFor(model => model.Tags, htmlAttributes: new {@class = "control-label col-md-2"})
                 <div class="col-md-10">
-                    @Html.EditorFor(model => model.Tags, new { htmlAttributes = new { @class = "form-control" } })
-                    @Html.ValidationMessageFor(model => model.Tags, "", new { @class = "text-danger" })
+                    @Html.EditorFor(model => model.Tags, new {htmlAttributes = new {@class = "form-control"}})
+                    @Html.ValidationMessageFor(model => model.Tags, "", new {@class = "text-danger"})
                 </div>
             </div>
 
             <div class="form-group">
-                @Html.LabelFor(model => model.ViewModel, htmlAttributes: new { @class = "control-label col-md-2" })
+                @Html.LabelFor(model => model.ViewModel, htmlAttributes: new {@class = "control-label col-md-2"})
                 <div class="col-md-10">
-                    @Html.EditorFor(model => model.ViewModel, new { htmlAttributes = new { @class = "form-control" } })
-                    @Html.ValidationMessageFor(model => model.ViewModel, "", new { @class = "text-danger" })
+                    @Html.EditorFor(model => model.ViewModel, new {htmlAttributes = new {@class = "form-control"}})
+                    @Html.ValidationMessageFor(model => model.ViewModel, "", new {@class = "text-danger"})
                 </div>
             </div>
 
             <div class="form-group">
-                @Html.LabelFor(model => model.View, htmlAttributes: new { @class = "control-label col-md-2" })
+                @Html.LabelFor(model => model.View, htmlAttributes: new {@class = "control-label col-md-2"})
                 <div class="col-md-10">
-                    @Html.EditorFor(model => model.View, new { htmlAttributes = new { @class = "form-control" } })
-                    @Html.ValidationMessageFor(model => model.View, "", new { @class = "text-danger" })
+                    @Html.EditorFor(model => model.View, new {htmlAttributes = new {@class = "form-control"}})
+                    @Html.ValidationMessageFor(model => model.View, "", new {@class = "text-danger"})
                 </div>
             </div>
 
             <div class="form-group">
                 <div class="col-md-offset-2 col-md-10">
-                    <input type="submit" value="Create" class="btn btn-default" />
+                    <input type="submit" value="Add" class="btn btn-default" style="margin-right: 5px;"/>
+                    <button class="btn" onclick="window.history.back();">Cancel</button>
                 </div>
             </div>
         </div>
     }
-
-    <div>
-        @Html.ActionLink("Back to List", "Index")
-    </div>
 </section>
     @section Scripts {
         @Scripts.Render("~/bundles/jqueryval")
