--- a/MvvmTools.Web/Views/MvvmTemplates/Delete.cshtml
+++ b/MvvmTools.Web/Views/MvvmTemplates/Delete.cshtml
@@ -1,19 +1,25 @@
 ﻿@model MvvmTools.Web.Models.MvvmTemplate
 
 @{
-    ViewBag.Title = "Delete Template    ";
+    ViewBag.Title = "Delete Template";
 }
 
 <div class="pageheader">
     <h1>@ViewBag.Title</h1>
+    <p class="description">Are you sure you want to delete this template?</p>
 </div>
 
 <section id="main-content">
-    <h3>Are you sure you want to delete this?</h3>
     <div>
-        <h4>MVVM Template</h4>
-        <hr />
         <dl class="dl-horizontal">
+            <dt>
+                @Html.DisplayNameFor(model => model.Enabled)
+            </dt>
+
+            <dd>
+                @Html.DisplayFor(model => model.Enabled)
+            </dd>
+
             <dt>
                 @Html.DisplayNameFor(model => model.Name)
             </dt>
@@ -31,11 +37,11 @@
             </dd>
 
             <dt>
-                @Html.DisplayNameFor(model => model.MvvmTemplateCategoryId)
+                @Html.DisplayNameFor(model => model.MvvmTemplateCategory.Name)
             </dt>
 
             <dd>
-                @Html.DisplayFor(model => model.MvvmTemplateCategoryId)
+                @Html.DisplayFor(model => model.MvvmTemplateCategory.Name)
             </dd>
 
             <dt>
@@ -69,8 +75,8 @@
             @Html.AntiForgeryToken()
 
             <div class="form-actions no-color">
-                <input type="submit" value="Delete" class="btn btn-default" /> |
-                @Html.ActionLink("Back to List", "Index")
+                <input type="submit" value="Delete" class="btn btn-default" style="margin-right: 5px"/>
+                <button class="btn" onclick="window.history.back();">Cancel</button>
             </div>
         }
     </div>
