--- a/MvvmTools.Web/Views/MvvmTemplates/Index.cshtml
+++ b/MvvmTools.Web/Views/MvvmTemplates/Index.cshtml
@@ -1,29 +1,63 @@
-﻿@model MvvmTools.Web.Models.TemplateIndexViewModel
+﻿@using Microsoft.AspNet.Identity
+@using MvvmTools.Web.Extensions
+@model MvvmTools.Web.Models.TemplateIndexViewModel
 
 @{
-    ViewBag.Title = "All Templates";
+    ViewBag.Title = "My Templates";
 }
 
 <div class="pageheader">
     <h1>@ViewBag.Title</h1>
-    <p>This is the full list of MVVM templates shared by the community of MVVM Tools users.  To share yours, go to @Html.ActionLink("My Templates", "MyIndex").</p>
+    @if (@User.Identity.IsAuthenticated)
+    {
+        <p>These are the templates shared by the community.</p>
+    }
+    else
+    {
+        <p>These are the templates shared by the community. To add yours, @Html.ActionLink("log in", "LogIn", "Account").</p>
+    }
     <div class="breadcrumb-wrapper hidden-xs">
         <span class="label">You are here:</span>
         <ol class="breadcrumb">
             <li>
                 <a href="">Templates</a>
             </li>
-            <li class="active">All Templates</li>
+            <li class="active">Templates</li>
         </ol>
     </div>
 </div>
 <section id="main-content">
-    @*<p>@Html.ActionLink("Create New", "Create", null, new {@class = "btn btn-primary"})</p>*@
     <div class="row">
         <div class="col-md-12 col-lg-12">
             <div class="panel panel-default">
                 <div class="panel-body ng-binding">
-                    @using (Html.BeginForm("Index", "MvvmTemplates", FormMethod.Post, new { @class = "form-inline" }))
+                    @if (@User.Identity.IsAuthenticated)
+                    {
+                        <h2>Configuration</h2>
+                        <hr/>
+                        using (Html.BeginForm("Index", "MvvmTemplates", FormMethod.Post, new {@class = "form-horizontal"}))
+                        {
+                            <fieldset>
+                                <ul class="ul-no-list-style">
+                                    <li class='panel'>
+                                        @Html.Label("author", "Author:")
+                                        @Html.TextBox("author", @Model.Author, new {@class = "text"})
+                                    </li>
+                                    <li class='panel'>
+                                        @Html.CheckBoxAndLabelFor(m => m.ShowTemplates)
+                                    </li>
+                                    <li class='panel'>
+                                        <input type="submit" class="btn btn-default btn-sm" value="Save">
+                                    </li>
+                                </ul>
+                            </fieldset>
+                        }
+                        <hr/>
+                        <h2>Templates</h2>
+                        <hr/>
+                        <p>@Html.ActionLink("Create New Template", "Create", null, new {@class = "btn btn-primary btn-sm"})</p>
+                    }
+                    @using (Html.BeginForm("Index", "MvvmTemplates", FormMethod.Post, new {@class = "form-inline"}))
                     {
                         <fieldset>
                             <ul class="ul-no-list-style">
@@ -40,16 +74,12 @@
                                     @Html.DropDownList("category", @Model.Categories)
                                 </li>
                                 <li class='panel'>
-                                    @Html.TextBox("search", @Model.Search, new {placeholder = "Search...", type = "text", @class = "search", css = "width=50px"})
+                                    @Html.TextBox("search", @Model.Search, new {placeholder = "Search...", type = "text", @class = "search", css = "width=100px"})
                                 </li>
                                 <li class='panel'>
                                     <input type="submit" class="btn btn-default btn-sm" value="Apply">
                                 </li>
                             </ul>
-
-                            @*<input type="text" class="search" placeholder="Search..."
-                                   id="search">*@
-                            
                         </fieldset>
                     }
                     <table class="table table-striped table-hover">
@@ -87,14 +117,14 @@
                                     @Html.DisplayFor(modelItem => item.Category)
                                 </td>
                                 <td>
-                                    @if (Model.Author == item.Author)
+                                    @if (@User.Identity.IsAuthenticated && Model.Author == item.Author)
                                     {
-                                        @Html.ActionLink("Edit", "Edit", new { id = item.Id }, new { @class = "btn btn-default btn-xs", style = "margin-right:5px;" })
-                                        @Html.ActionLink("Delete", "Delete", new { id = item.Id }, new { @class = "btn btn-default btn-xs" })
+                                        @Html.ActionLink("Edit", "Edit", new {id = item.Id, returnUrl = @Request.Url.PathAndQuery}, new {@class = "btn btn-default btn-xs", style = "margin-right:5px;"})
+                                        @Html.ActionLink("Delete", "Delete", new {id = item.Id, returnUrl = @Request.Url.PathAndQuery}, new {@class = "btn btn-default btn-xs"})
                                     }
                                     else
                                     {
-                                        @Html.ActionLink("Details", "Details", new { id = item.Id }, new { @class = "btn btn-default btn-xs" })
+                                        @Html.ActionLink("Details", "Details", new {id = item.Id, returnUrl = @Request.Url.PathAndQuery}, new {@class = "btn btn-default btn-xs"})
                                     }
                                 </td>
                             </tr>
