--- a/MvvmTools.Web/Views/MvvmTemplates/Edit.cshtml
+++ b/MvvmTools.Web/Views/MvvmTemplates/Edit.cshtml
@@ -1,6 +1,4 @@
-﻿@using MvvmTools.Web.Extensions
-
-@model MvvmTools.Web.Models.TemplateEditViewModel
+﻿@model MvvmTools.Web.Models.TemplateEditViewModel
 
 @{
     ViewBag.Title = "Edit Template";
@@ -17,61 +15,61 @@
 
         <div class="form-horizontal">
             @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-            @Html.HiddenFor(model => model.Template.Id)
+            @Html.HiddenFor(model => model.Id)
 
             <div class="form-group">
-                @Html.LabelFor(model => model.Template.Enabled, htmlAttributes: new { @class = "control-label col-md-2" })
+                @Html.LabelFor(model => model.Enabled, htmlAttributes: new { @class = "control-label col-md-2" })
                 <div class="col-md-10">
-                    @Html.CheckBoxFor(model => model.Template.Enabled)
-                    @Html.ValidationMessageFor(model => model.Template.Enabled, "", new { @class = "text-danger" })
+                    @Html.CheckBoxFor(model => model.Enabled)
+                    @Html.ValidationMessageFor(model => model.Enabled, "", new { @class = "text-danger" })
                 </div>
             </div>
 
             <div class="form-group">
-                @Html.LabelFor(model => model.Template.Name, htmlAttributes: new { @class = "control-label col-md-2" })
+                @Html.LabelFor(model => model.Name, htmlAttributes: new { @class = "control-label col-md-2" })
                 <div class="col-md-10">
-                    @Html.EditorFor(model => model.Template.Name, new { htmlAttributes = new { @class = "form-control" } })
-                    @Html.ValidationMessageFor(model => model.Template.Name, "", new { @class = "text-danger" })
+                    @Html.EditorFor(model => model.Name, new { htmlAttributes = new { @class = "form-control" } })
+                    @Html.ValidationMessageFor(model => model.Name, "", new { @class = "text-danger" })
                 </div>
             </div>
 
             <div class="form-group">
-                @Html.LabelFor(model => model.Template.Language, htmlAttributes: new { @class = "control-label col-md-2" })
+                @Html.LabelFor(model => model.Language, htmlAttributes: new { @class = "control-label col-md-2" })
                 <div class="col-md-10">
-                    @Html.DropDownListFor(model => model.SelectedLanguage, @Model.Languages, new { htmlAttributes = new { @class = "form-control" } })
-                    @Html.ValidationMessageFor(model => model.Template.Language, "", new { @class = "text-danger" })
+                    @Html.DropDownListFor(model => model.Language, @Model.Languages, new { htmlAttributes = new { @class = "form-control" } })
+                    @Html.ValidationMessageFor(model => model.Language, "", new { @class = "text-danger" })
                 </div>
             </div>
 
             <div class="form-group">
-                @Html.LabelFor(model => model.Template.MvvmTemplateCategory.Name, htmlAttributes: new { @class = "control-label col-md-2" })
+                @Html.LabelFor(model => model.MvvmTemplateCategory.Name, htmlAttributes: new { @class = "control-label col-md-2" })
                 <div class="col-md-10">
-                    @Html.DropDownListFor(model => model.SelectedCategoryId, @Model.Categories, new { htmlAttributes = new { @class = "form-control" } })
-                    @Html.ValidationMessageFor(model => model.Template.MvvmTemplateCategory.Name, "", new { @class = "text-danger" })
+                    @Html.DropDownListFor(model => model.MvvmTemplateCategoryId, @Model.Categories, new { htmlAttributes = new { @class = "form-control" } })
+                    @Html.ValidationMessageFor(model => model.MvvmTemplateCategory.Name, "", new { @class = "text-danger" })
                 </div>
             </div>
 
             <div class="form-group">
-                @Html.LabelFor(model => model.Template.Tags, htmlAttributes: new { @class = "control-label col-md-2" })
+                @Html.LabelFor(model => model.Tags, htmlAttributes: new { @class = "control-label col-md-2" })
                 <div class="col-md-10">
-                    @Html.EditorFor(model => model.Template.Tags, new { htmlAttributes = new { @class = "form-control" } })
-                    @Html.ValidationMessageFor(model => model.Template.Tags, "", new { @class = "text-danger" })
+                    @Html.EditorFor(model => model.Tags, new { htmlAttributes = new { @class = "form-control" } })
+                    @Html.ValidationMessageFor(model => model.Tags, "", new { @class = "text-danger" })
                 </div>
             </div>
 
             <div class="form-group">
-                @Html.LabelFor(model => model.Template.ViewModel, htmlAttributes: new { @class = "control-label col-md-2" })
+                @Html.LabelFor(model => model.ViewModel, htmlAttributes: new { @class = "control-label col-md-2" })
                 <div class="col-md-10">
-                    @Html.EditorFor(model => model.Template.ViewModel, new { htmlAttributes = new { @class = "form-control" } })
-                    @Html.ValidationMessageFor(model => model.Template.ViewModel, "", new { @class = "text-danger" })
+                    @Html.EditorFor(model => model.ViewModel, new { htmlAttributes = new { @class = "form-control" } })
+                    @Html.ValidationMessageFor(model => model.ViewModel, "", new { @class = "text-danger" })
                 </div>
             </div>
 
             <div class="form-group">
-                @Html.LabelFor(model => model.Template.View, htmlAttributes: new { @class = "control-label col-md-2" })
+                @Html.LabelFor(model => model.View, htmlAttributes: new { @class = "control-label col-md-2" })
                 <div class="col-md-10">
-                    @Html.EditorFor(model => model.Template.View, new {htmlAttributes = new {@class = "form-control"}})
-                    @Html.ValidationMessageFor(model => model.Template.View, "", new {@class = "text-danger"})
+                    @Html.EditorFor(model => model.View, new {htmlAttributes = new {@class = "form-control"}})
+                    @Html.ValidationMessageFor(model => model.View, "", new {@class = "text-danger"})
                 </div>
             </div>
 
