--- a/MvvmTools.Web/Views/Shared/_Header.cshtml
+++ b/MvvmTools.Web/Views/Shared/_Header.cshtml
@@ -1,7 +1,7 @@
         <header id="header">
             <!--logo start-->
             <div class="brand">
-                <a href="index.html" class="logo">
+                <a href="@Url.Action("Index", "Home")" class="logo">
                     <span>MVVM</span>TOOLS</a>
             </div>
             <!--logo end-->
@@ -11,20 +11,72 @@
                         <i class="fa fa-bars"></i>
                     </button>
                 </li>
+                
                 @if (@User.Identity.IsAuthenticated)
                 {
-                    <li class="toggle-profile hidden-xs">
-                        <button type="button" class="btn btn-default" id="toggle-profile">
-                            <i class="icon-user"></i>
-                        </button>
+                    <li class="toggle-profile hidden-xs dropdown">
+                        <div class="profile-body">
+                            <a class="dropdown-toggle" data-toggle="dropdown" aria-expanded="false">
+                                <button type="button" class="btn btn-default" id="toggle-profile">
+                                    <i class="icon-user"></i>
+                                </button>
+                            </a>
+                            <ul class="dropdown-menu animated fadeInRight" role="menu">
+                                @*<li class="profile-progress">
+                                    <h5>
+                                        <span>80%</span>
+                                        <small>Profile complete</small>
+                                    </h5>
+                                    <div class="progress progress-xs">
+                                        <div class="progress-bar progress-bar-primary" style="width: 80%">
+                                        </div>
+                                    </div>
+                                </li>
+                                <li class="divider" />*@
+                                <li>
+                                    <a href="javascript:void(0);">
+                                        <span class="icon">
+                                            <i class="fa fa-user"></i>
+                                        </span>My Account
+                                    </a>
+                                </li>
+                                @*<li>
+                                    <a href="javascript:void(0);">
+                                        <span class="icon">
+                                            <i class="fa fa-envelope"></i>
+                                        </span>Messages
+                                    </a>
+                                </li>*@
+                                @*<li>
+                                    <a href="javascript:void(0);">
+                                        <span class="icon">
+                                            <i class="fa fa-cog"></i>
+                                        </span>Settings
+                                    </a>
+                                </li>*@
+                                <li class="divider"></li>
+                                <li>
+                                    <a href="" onclick="posttourl('@Url.Action("LogOff", "Account")', '@Url.Action("Index", "Home")');">
+                                        <span class="icon">
+                                            <i class="fa fa-sign-out"></i>
+                                        </span>Logout
+                                    </a>
+                                </li>
+                            </ul>
+                        </div>
                     </li>
+
                 }
             </ul>
-            @*<ul class="nav navbar-nav navbar-right">
-                <li class="toggle-navigation toggle-right">
-                    <button class="sidebar-toggle" id="toggle-right">
-                        <i class="fa fa-indent"></i>
-                    </button>
-                </li>
-            </ul>*@
+            @*@if (@User.Identity.IsAuthenticated)
+            {
+                <ul class="nav navbar-nav navbar-right">
+                    <li class="toggle-navigation toggle-right">
+                        <button class="sidebar-toggle" id="toggle-right">
+                            <i class="fa fa-indent"></i>
+                        </button>
+                    </li>
+                </ul>
+            }*@
+
         </header>
