--- a/MvvmTools.Web/Views/Shared/_LeftSideBar.cshtml
+++ b/MvvmTools.Web/Views/Shared/_LeftSideBar.cshtml
@@ -1,57 +1,7 @@
+@using Microsoft.AspNet.Identity
+@using MvvmTools.Shared
         <!--sidebar left start-->
 <aside class="sidebar sidebar-left">
-    @if (@User.Identity.IsAuthenticated)
-    {
-        using (Html.BeginForm(null, null, FormMethod.Post, new {id = "__AjaxAntiForgeryForm"}))
-        {
-            @Html.AntiForgeryToken()
-        }
-        <div class="sidebar-profile">
-            <div class="avatar">
-                <img class="img-circle profile-image" src="~/Images/profile.jpg" alt="profile">
-                <i class="on border-dark animated bounceIn"></i>
-            </div>
-            <div class="profile-body dropdown">
-                <a href="javascript:void(0);" class="dropdown-toggle" data-toggle="dropdown" aria-expanded="false"><h4>Example User<span class="caret"></span></h4></a>
-                <small class="title">Front-end Developer</small>
-                <ul class="dropdown-menu animated fadeInRight" role="menu">
-                    <li class="profile-progress">
-                        <h5>
-                            <span>80%</span>
-                            <small>Profile complete</small>
-                        </h5>
-                        <div class="progress progress-xs">
-                            <div class="progress-bar progress-bar-primary" style="width: 80%">
-                            </div>
-                        </div>
-                    </li>
-                    <li class="divider"/>
-                    <li>
-                        <a href="javascript:void(0);">
-                            <span class="icon"><i class="fa fa-user"></i>
-                                </span>My Account</a>
-                    </li>
-                    <li>
-                        <a href="javascript:void(0);">
-                            <span class="icon"><i class="fa fa-envelope"></i>
-                                </span>Messages</a>
-                    </li>
-                    <li>
-                        <a href="javascript:void(0);">
-                            <span class="icon"><i class="fa fa-cog"></i>
-                                </span>Settings</a>
-                    </li>
-                    <li class="divider"></li>
-                    <li>
-                        <a href="" onclick="posttourl('@Url.Action("LogOff", "Account")', '@Url.Action("Index", "Home")');">
-                            <span class="icon"><i class="fa fa-sign-out"></i>
-                                </span>Logout
-                        </a>
-                    </li>
-                </ul>
-            </div>
-        </div>
-    }
     <nav>
         <h5 class="sidebar-header">Navigation</h5>
         <ul class="nav nav-pills nav-stacked">
@@ -65,6 +15,14 @@
                     <i class="fa fa-fw fa-tachometer"></i> Templates
                 </a>
             </li>
+            @if (User.Identity.IsAuthenticated && User.Identity.GetUserName() == Secrets.AdminUserName)
+            {
+                <li class="@Html.IsSelected(controller: "MvvmTemplateCategories")">
+                    <a href="@Url.Action("Index", "MvvmTemplateCategories")">
+                        <i class="fa fa-fw fa-tachometer"></i> Categories
+                    </a>
+                </li>
+            }
 
             @*<li class="nav-dropdown @Html.IsSelected(controller: "MvvmTemplates")">
                         <a href="#">
@@ -85,26 +43,6 @@
                     </li>*@
         </ul>
     </nav>
-
-    <script type="text/javascript">
-        function posttourl(url, gotourl) {
-            var form = $('#__AjaxAntiForgeryForm');
-            var token = $('input[name="__RequestVerificationToken"]', form).val();
-            $.ajax({
-                url: url,
-                type: 'POST',
-                data: {
-                    __RequestVerificationToken: token,
-                    someValue: 'some value'
-                },
-                success: function (result) {
-                    if (result === true)
-                        location.href = gotourl;
-                }
-            });
-            return false;
-        };
-    </script>
 </aside>
 
 
