--- a/MvvmTools.Web/Views/Dashboard/Index.cshtml
+++ b/MvvmTools.Web/Views/Dashboard/Index.cshtml
@@ -4,7 +4,7 @@
 
 <div class="pageheader">
     <h1>Dashboard</h1>
-    <p class="description">Welcome to NEUBOARD Responsive Admin Theme</p>
+    <p class="description">Welcome to MVVM Tools</p>
     <div class="breadcrumb-wrapper hidden-xs">
         <span class="label">You are here:</span>
         <ol class="breadcrumb">
