--- a/MvvmTools.Web/Views/Shared/_Layout.cshtml
+++ b/MvvmTools.Web/Views/Shared/_Layout.cshtml
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>NeuBoard | @ViewBag.Title</title>
+    <title>MVVM Tools | @ViewBag.Title</title>
     @Styles.Render("~/Content/css")
     @Scripts.Render("~/bundles/modernizr")
     <!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
