--- a/MvvmTools.Web/Content/main.scss
+++ b/MvvmTools.Web/Content/main.scss
@@ -1,7 +1,6 @@
 /*
  *
- *   NEUBOARD - Responsive Admin Theme
- *   Copyright 2014 Authentic Goods Co. http://authenticgoods.co
+ *   Copyright 2015 Chris Bordeman
  *
 */
  
