--- a/MvvmTools.Web/Views/MvvmTemplates/Index.cshtml
+++ b/MvvmTools.Web/Views/MvvmTemplates/Index.cshtml
@@ -35,13 +35,18 @@
                     {
                         <h2>Configuration</h2>
                         <hr/>
-                        using (Html.BeginForm("Index", "MvvmTemplates", FormMethod.Post, new {@class = "form-horizontal"}))
+                        using (Html.BeginForm("Index", "MvvmTemplates", FormMethod.Post, new { @class = "form-horizontal" }))
                         {
+                            @Html.AntiForgeryToken()
+
+                            @Html.ValidationSummary(true, "", new {@class = "text-danger"})
+
                             <fieldset>
                                 <ul class="ul-no-list-style">
                                     <li class='panel'>
-                                        @Html.Label("author", "Author:")
+                                        @Html.LabelFor(m => m.Author)
                                         @Html.TextBox("author", @Model.Author, new {@class = "text"})
+                                        @Html.ValidationMessageFor(model => model.Author, "", new { @class = "text-danger" })
                                     </li>
                                     <li class='panel'>
                                         @Html.CheckBoxAndLabelFor(m => m.ShowTemplates)
@@ -52,86 +57,88 @@
                                 </ul>
                             </fieldset>
                         }
-                        <hr/>
+                        <hr />
                         <h2>Templates</h2>
-                        <hr/>
-                        <p>@Html.ActionLink("Create New Template", "Create", null, new {@class = "btn btn-primary btn-sm"})</p>
-                    }
-                    @using (Html.BeginForm("Index", "MvvmTemplates", FormMethod.Post, new {@class = "form-inline"}))
-                    {
-                        <fieldset>
-                            <ul class="ul-no-list-style">
-                                <li class='panel'>
-                                    @Html.Label("selectedAuthor", "Author:")
-                                    @Html.DropDownList("author", @Model.Authors)
-                                </li>
-                                <li class='panel'>
-                                    @Html.Label("selectedLanguage", "Language:")
-                                    @Html.DropDownList("selectedLanguage", @Model.Languages)
-                                </li>
-                                <li class='panel'>
-                                    @Html.Label("selectedCategory", "Category:")
-                                    @Html.DropDownList("selectedCategoryId", @Model.Categories)
-                                </li>
-                                <li class='panel'>
-                                    @Html.TextBox("search", @Model.Search, new {placeholder = "Search...", type = "text", @class = "search", css = "width=100px"})
-                                </li>
-                                <li class='panel'>
-                                    <input type="submit" class="btn btn-default btn-sm" value="Apply">
-                                </li>
-                            </ul>
-                        </fieldset>
-                    }
-                    <table class="table table-striped table-hover">
-                        <thead>
-                        <tr>
-                            <th>
-                                @Html.DisplayNameFor(model => model.Templates.First().Author)
-                            </th>
-                            <th>
-                                @Html.DisplayNameFor(model => model.Templates.First().Name)
-                            </th>
-                            <th>
-                                @Html.DisplayNameFor(model => model.Templates.First().Language)
-                            </th>
-                            <th>
-                                @Html.DisplayNameFor(model => model.Templates.First().Category)
-                            </th>
-                            <th></th>
-                        </tr>
-                        </thead>
-                        <tbody>
-                        @foreach (var item in Model.Templates)
-                        {
-                            <tr>
-                                <td>
-                                    @Html.DisplayFor(modelItem => item.Author)
-                                </td>
-                                <td>
-                                    @Html.DisplayFor(modelItem => item.Name)
-                                </td>
-                                <td>
-                                    @Html.DisplayFor(modelItem => item.Language)
-                                </td>
-                                <td>
-                                    @Html.DisplayFor(modelItem => item.Category)
-                                </td>
-                                <td>
-                                    @if (@User.Identity.IsAuthenticated && Model.Author == item.Author)
-                                    {
-                                        @Html.ActionLink("Edit", "Edit", new {id = item.Id }, new {@class = "btn btn-default btn-xs", style = "margin-right:5px;"})
-                                        @Html.ActionLink("Delete", "Delete", new {id = item.Id }, new {@class = "btn btn-default btn-xs"})
-                                    }
-                                    else
-                                    {
-                                        @Html.ActionLink("Details", "Details", new {id = item.Id }, new {@class = "btn btn-default btn-xs"})
-                                    }
-                                </td>
-                            </tr>
+                        <hr />
+                        <p>@Html.ActionLink("Create New Template", "Create", null, new { @class = "btn btn-primary btn-sm" })</p>
                         }
-                        </tbody>
-                    </table>
-                </div>
+                        @using (Html.BeginForm("Index", "MvvmTemplates", FormMethod.Post, new { @class = "form-inline" }))
+                        {
+                            @Html.AntiForgeryToken()
+
+                            <fieldset>
+                                <ul class="ul-no-list-style">
+                                    <li class='panel'>
+                                        @Html.Label("selectedAuthor", "Author:")
+                                        @Html.DropDownList("selectedAuthor", @Model.Authors)
+                                    </li>
+                                    <li class='panel'>
+                                        @Html.Label("selectedLanguage", "Language:")
+                                        @Html.DropDownList("selectedLanguage", @Model.Languages)
+                                    </li>
+                                    <li class='panel'>
+                                        @Html.Label("selectedCategory", "Category:")
+                                        @Html.DropDownList("selectedCategoryId", @Model.Categories)
+                                    </li>
+                                    <li class='panel'>
+                                        @Html.TextBox("search", @Model.Search, new { placeholder = "Search...", type = "text", @class = "search", css = "width=100px" })
+                                    </li>
+                                    <li class='panel'>
+                                        <input type="submit" class="btn btn-default btn-sm" value="Apply">
+                                    </li>
+                                </ul>
+                            </fieldset>
+                        }
+                        <table class="table table-striped table-hover">
+                            <thead>
+                                <tr>
+                                    <th>
+                                        @Html.DisplayNameFor(model => model.Templates.First().Author)
+                                    </th>
+                                    <th>
+                                        @Html.DisplayNameFor(model => model.Templates.First().Name)
+                                    </th>
+                                    <th>
+                                        @Html.DisplayNameFor(model => model.Templates.First().Language)
+                                    </th>
+                                    <th>
+                                        @Html.DisplayNameFor(model => model.Templates.First().Category)
+                                    </th>
+                                    <th></th>
+                                </tr>
+                            </thead>
+                            <tbody>
+                                @foreach (var item in Model.Templates)
+                                {
+                                    <tr>
+                                        <td>
+                                            @Html.DisplayFor(modelItem => item.Author)
+                                        </td>
+                                        <td>
+                                            @Html.DisplayFor(modelItem => item.Name)
+                                        </td>
+                                        <td>
+                                            @Html.DisplayFor(modelItem => item.Language)
+                                        </td>
+                                        <td>
+                                            @Html.DisplayFor(modelItem => item.Category)
+                                        </td>
+                                        <td>
+                                            @if (@User.Identity.IsAuthenticated && Model.Author == item.Author)
+                                            {
+                                                @Html.ActionLink("Edit", "Edit", new { id = item.Id }, new { @class = "btn btn-default btn-xs", style = "margin-right:5px;" })
+                                                @Html.ActionLink("Delete", "Delete", new { id = item.Id }, new { @class = "btn btn-default btn-xs" })
+                                            }
+                                            else
+                                            {
+                                                @Html.ActionLink("Details", "Details", new { id = item.Id }, new { @class = "btn btn-default btn-xs" })
+                                            }
+                                        </td>
+                                    </tr>
+                                }
+                            </tbody>
+                        </table>
+                    </div>
             </div>
         </div>
     </div>
