--- a/MvvmTools.Web/Views/Shared/_Header.cshtml
+++ b/MvvmTools.Web/Views/Shared/_Header.cshtml
@@ -12,11 +12,15 @@
                     </button>
                 </li>
 
-                <li class="toggle-profile hidden-xs dropdown">
+                <li class="hidden-xs dropdown">
                     <div class="profile-body">
                         <a class="dropdown-toggle" data-toggle="dropdown" aria-expanded="false">
                             <button type="button" class="btn btn-default" id="toggle-profile">
                                 <i class="icon-user"></i>
+                                @if (@User.Identity.IsAuthenticated)
+                                {
+                                    <label style="margin-left: 5px; font-weight: normal; font-size: 0.8em; vertical-align: middle">Welcome, @User.Identity.Name!</label>
+                                }
                             </button>
                         </a>
                         <ul class="dropdown-menu animated fadeInRight" role="menu">
