--- a/MvvmTools.Web/Views/Home/Index.cshtml
+++ b/MvvmTools.Web/Views/Home/Index.cshtml
@@ -20,7 +20,7 @@
     <p/>
     <h2>Source Code</h2>
     <p>
-        Source code is available at <a href="https://github.com/cbordeman/Mvvm-Tools">GitHub</a>, released under the <a href="http://www.gnu.org/licenses/lgpl-3.0.en.html">LGPL</a> by Chris Bordeman.
+        Source code is available at <a href="https://github.com/cbordeman/Mvvm-Tools">GitHub</a>, released under the <a href="http://www.apache.org/licenses/">latest Apache License</a> by Chris Bordeman.
     </p>
     <p/>
     <h2>Issues and Discussions</h2>
