--- a/MvvmTools.Web/Views/MvvmTemplates/Index.cshtml
+++ b/MvvmTools.Web/Views/MvvmTemplates/Index.cshtml
@@ -1,4 +1,6 @@
-﻿@using MvvmTools.Web.Extensions
+﻿@using Microsoft.AspNet.Identity
+@using MvvmTools.Shared
+@using MvvmTools.Web.Extensions
 
 @model MvvmTools.Web.Models.TemplateIndexViewModel
 
@@ -30,115 +32,116 @@
     <div class="row">
         <div class="col-md-12 col-lg-12">
             <div class="panel panel-default">
-                <div class="panel-body ng-binding">
-                    @if (@User.Identity.IsAuthenticated)
-                    {
-                        <h2>Configuration</h2>
-                        <hr/>
-                        using (Html.BeginForm("Index", "MvvmTemplates", FormMethod.Post, new { @class = "form-horizontal" }))
-                        {
-                            @Html.AntiForgeryToken()
+                @using (Html.BeginForm("Index", "MvvmTemplates", FormMethod.Post))
+                {
+                    @Html.AntiForgeryToken()
 
+                    <div class="panel-body ng-binding">
+                        @if (@User.Identity.IsAuthenticated && @User.Identity.GetUserName() != Secrets.AdminUserName)
+                        {
+                            <h2>Configuration</h2>
+                            <hr/>
+                            
                             @Html.ValidationSummary(true, "", new {@class = "text-danger"})
+                            
+                            <ul class="form-horizontal ul-no-list-style">
+                                <li class='panel'>
+                                    @Html.LabelFor(m => m.Author)
+                                    @Html.TextBox("author", @Model.Author, new {@class = "text"})
+                                    @Html.ValidationMessageFor(model => model.Author, "", new {@class = "text-danger"})
+                                </li>
+                                <li class='panel'>
+                                    @Html.CheckBoxAndLabelFor(m => m.ShowTemplates)
+                                </li>
+                                <li class='panel'>
+                                    <input type="submit" class="btn btn-default btn-sm" value="Save">
+                                </li>
+                            </ul>
 
-                            <fieldset>
-                                <ul class="ul-no-list-style">
-                                    <li class='panel'>
-                                        @Html.LabelFor(m => m.Author)
-                                        @Html.TextBox("author", @Model.Author, new {@class = "text"})
-                                        @Html.ValidationMessageFor(model => model.Author, "", new { @class = "text-danger" })
-                                    </li>
-                                    <li class='panel'>
-                                        @Html.CheckBoxAndLabelFor(m => m.ShowTemplates)
-                                    </li>
-                                    <li class='panel'>
-                                        <input type="submit" class="btn btn-default btn-sm" value="Save">
-                                    </li>
-                                </ul>
-                            </fieldset>
+                            <hr/>
+                            <h2>Templates</h2>
+                            <hr/>
                         }
-                        <hr />
-                        <h2>Templates</h2>
-                        <hr />
-                        <p>@Html.ActionLink("Create New Template", "Create", null, new { @class = "btn btn-primary btn-sm" })</p>
-                        }
-                        @using (Html.BeginForm("Index", "MvvmTemplates", FormMethod.Post, new { @class = "form-inline" }))
-                        {
-                            @Html.AntiForgeryToken()
+                        <ul class="form-inline ul-no-list-style">
+                            @if (@User.Identity.IsAuthenticated)
+                            {
+                                <li class='panel'>
+                                    @Html.ActionLink("Create New Template", "Create", null, new { @class = "btn btn-primary btn-sm" })
+                                </li>
+                            }
+                            <li class="hidden-xs" id="templatesearch">
+                                @Html.TextBoxFor(m => m.Search, @Model.Search, new { placeholder = "Search...", type = "search", @class = "search" })
+                                <button type="submit" class="btn btn-sm btn-search">
+                                    <i class="fa fa-search"></i>
+                                </button>
+                            </li>
+                        </ul>
 
-                            <fieldset>
-                                <ul class="ul-no-list-style">
-                                    <li class='panel'>
-                                        @Html.Label("selectedAuthor", "Author:")
-                                        @Html.DropDownList("selectedAuthor", @Model.Authors)
-                                    </li>
-                                    <li class='panel'>
-                                        @Html.Label("selectedLanguage", "Language:")
-                                        @Html.DropDownList("selectedLanguage", @Model.Languages)
-                                    </li>
-                                    <li class='panel'>
-                                        @Html.Label("selectedCategory", "Category:")
-                                        @Html.DropDownList("selectedCategoryId", @Model.Categories)
-                                    </li>
-                                    <li class='panel'>
-                                        @Html.TextBox("search", @Model.Search, new { placeholder = "Search...", type = "text", @class = "search", css = "width=100px" })
-                                    </li>
-                                    <li class='panel'>
-                                        <input type="submit" class="btn btn-default btn-sm" value="Apply">
-                                    </li>
-                                </ul>
-                            </fieldset>
-                        }
-                        <table class="table table-striped table-hover">
-                            <thead>
-                                <tr>
-                                    <th>
-                                        @Html.DisplayNameFor(model => model.Templates.First().Author)
-                                    </th>
-                                    <th>
-                                        @Html.DisplayNameFor(model => model.Templates.First().Name)
-                                    </th>
-                                    <th>
-                                        @Html.DisplayNameFor(model => model.Templates.First().Language)
-                                    </th>
-                                    <th>
-                                        @Html.DisplayNameFor(model => model.Templates.First().Category)
-                                    </th>
-                                    <th></th>
-                                </tr>
-                            </thead>
-                            <tbody>
-                                @foreach (var item in Model.Templates)
-                                {
-                                    <tr>
-                                        <td>
-                                            @Html.DisplayFor(modelItem => item.Author)
-                                        </td>
-                                        <td>
-                                            @Html.DisplayFor(modelItem => item.Name)
-                                        </td>
-                                        <td>
-                                            @Html.DisplayFor(modelItem => item.Language)
-                                        </td>
-                                        <td>
-                                            @Html.DisplayFor(modelItem => item.Category)
-                                        </td>
-                                        <td>
-                                            @if (@User.Identity.IsAuthenticated && Model.Author == item.Author)
-                                            {
-                                                @Html.ActionLink("Edit", "Edit", new { id = item.Id }, new { @class = "btn btn-default btn-xs", style = "margin-right:5px;" })
-                                                @Html.ActionLink("Delete", "Delete", new { id = item.Id }, new { @class = "btn btn-default btn-xs" })
-                                            }
-                                            else
-                                            {
-                                                @Html.ActionLink("Details", "Details", new { id = item.Id }, new { @class = "btn btn-default btn-xs" })
-                                            }
-                                        </td>
-                                    </tr>
-                                }
-                            </tbody>
-                        </table>
+                        <ul class="form-inline ul-no-list-style">
+                            <li class='panel'>
+                                @Html.LabelFor(m => m.SelectedAuthor)
+                                @Html.DropDownListFor(m => m.SelectedAuthor, @Model.Authors, new { onchange = "this.form.submit()" })
+                            </li>
+                            <li class='panel'>
+                                @Html.LabelFor(m => m.SelectedLanguage)
+                                @Html.DropDownListFor(m => m.SelectedLanguage, @Model.Languages, new { onchange = "this.form.submit()" })
+                            </li>
+                            <li class='panel'>
+                                @Html.LabelFor(m => m.SelectedCategoryId)
+                                @Html.DropDownListFor(m => m.SelectedCategoryId, @Model.Categories, new { onchange = "this.form.submit()" })
+                            </li>
+                        </ul>
                     </div>
+                }
+                <table class="table table-striped table-hover">
+                    <thead>
+                    <tr>
+                        <th>
+                            @Html.DisplayNameFor(model => model.Templates.First().Author)
+                        </th>
+                        <th>
+                            @Html.DisplayNameFor(model => model.Templates.First().Name)
+                        </th>
+                        <th>
+                            @Html.DisplayNameFor(model => model.Templates.First().Language)
+                        </th>
+                        <th>
+                            @Html.DisplayNameFor(model => model.Templates.First().Category)
+                        </th>
+                        <th></th>
+                    </tr>
+                    </thead>
+                    <tbody>
+                    @foreach (var item in Model.Templates)
+                    {
+                        <tr @if (!item.Enabled) {<text>class = "text-muted" style="text-decoration: line-through"</text>} >
+                            <td>
+                                @Html.DisplayFor(modelItem => item.Author)
+                            </td>
+                            <td>
+                                @Html.DisplayFor(modelItem => item.Name)
+                            </td>
+                            <td>
+                                @Html.DisplayFor(modelItem => item.Language)
+                            </td>
+                            <td>
+                                @Html.DisplayFor(modelItem => item.Category)
+                            </td>
+                            <td>
+                                @if (@User.Identity.IsAuthenticated && (Model.Author == item.Author || @User.Identity.GetUserName() == Secrets.AdminUserName))
+                                {
+                                    @Html.ActionLink("Edit", "Edit", new {id = item.Id}, new {@class = "btn btn-default btn-xs", style = "margin-right:5px;"})
+                                    @Html.ActionLink("Delete", "Delete", new {id = item.Id}, new {@class = "btn btn-default btn-xs"})
+                                }
+                                else
+                                {
+                                    @Html.ActionLink("Details", "Details", new {id = item.Id}, new {@class = "btn btn-default btn-xs"})
+                                }
+                            </td>
+                        </tr>
+                    }
+                    </tbody>
+                </table>
             </div>
         </div>
     </div>
