Implemented external login provider Microsoft.

--- a/MvvmTools.Web/Views/Account/ExternalLoginFailure.cshtml
+++ b/MvvmTools.Web/Views/Account/ExternalLoginFailure.cshtml
@@ -4,7 +4,7 @@
 
 <div class="pageheader">
     <hgroup>
-        <h1>@ViewBag.Title.</h1>
-        <h2 class="text-danger">Unsuccessful login with service.</h2>
+        <h1>@ViewBag.Title</h1>
+        <p class="description text-danger">Unsuccessful login with service.</p>
     </hgroup>
 </div>
