--- a/MvvmTools.Web/Views/Account/Info.cshtml
+++ b/MvvmTools.Web/Views/Account/Info.cshtml
@@ -4,5 +4,5 @@
 
 <div class="pageheader">
     <h1>@ViewBag.Title</h1>
-    <h2>@ViewBag.Message</h2>
+    <p class="description">@ViewBag.Message</p>
 </div>
