--- a/MvvmTools.Web/Views/Account/ExternalLoginConfirmation.cshtml
+++ b/MvvmTools.Web/Views/Account/ExternalLoginConfirmation.cshtml
@@ -1,11 +1,11 @@
 ﻿@model MvvmTools.Web.Models.ExternalLoginConfirmationViewModel
 @{
-    ViewBag.Title = "Register";
+    ViewBag.Title = "Almost Done";
 }
 
 <div class="pageheader">
-    <h1>@ViewBag.Title.</h1>
-    <h2>Associate your @ViewBag.LoginProvider account.</h2>
+    <h1>@ViewBag.Title</h1>
+    <p class="description">Almost done.  Now let's complete your account.</p>
 </div>
 
 <section id="main-content">
@@ -13,19 +13,31 @@
     {
         @Html.AntiForgeryToken()
 
-        <h4>Association Form</h4>
-        <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
         <p class="text-info">
             You've successfully authenticated with <strong>@ViewBag.LoginProvider</strong>.
-            Please enter a user name for this site below and click the Register button to finish
+            Please enter or confirm the following fields for mvvmtools.net below and click the Register button to finish
             logging in.
         </p>
         <div class="form-group">
-            @Html.LabelFor(m => m.Email, new { @class = "col-md-2 control-label" })
+            @Html.LabelFor(m => m.UserName, new {@class = "col-md-2 control-label"})
             <div class="col-md-10">
-                @Html.TextBoxFor(m => m.Email, new { @class = "form-control" })
-                @Html.ValidationMessageFor(m => m.Email, "", new { @class = "text-danger" })
+                @Html.TextBoxFor(m => m.UserName, new {@class = "form-control"})
+                @Html.ValidationMessageFor(m => m.UserName, "", new {@class = "text-danger"})
+            </div>
+        </div>
+        <div class="form-group">
+            @Html.LabelFor(m => m.Email, new {@class = "col-md-2 control-label"})
+            <div class="col-md-10">
+                @Html.TextBoxFor(m => m.Email, new {@class = "form-control"})
+                @Html.ValidationMessageFor(m => m.Email, "", new {@class = "text-danger"})
+            </div>
+        </div>
+        <div class="form-group">
+            @Html.LabelFor(m => m.Author, new { @class = "col-md-2 control-label" })
+            <div class="col-md-10">
+                @Html.TextBoxFor(m => m.Author, new { @class = "form-control" })
+                @Html.ValidationMessageFor(m => m.Author, "", new { @class = "text-danger" })
             </div>
         </div>
         <div class="form-group">
