--- a/MvvmTools.Web/Views/Shared/Error.cshtml
+++ b/MvvmTools.Web/Views/Shared/Error.cshtml
@@ -8,23 +8,29 @@
 
 <div class="pageheader">
     <h1 class="text-danger">@ViewBag.Title</h1>
-    @{
-        <h3 class="text-danger">An error occurred.  If the problem persists, please contact the <a href="mailto:@Secrets.AdminEmail">administrator</a>.</h3>
-    }
+    <p class="description text-danger">An error occurred. If the problem persists, please contact the <a href="mailto:@Secrets.AdminEmail">administrator</a>.</p>
 </div>
 
-@if (Model != null && HttpContext.Current.IsDebuggingEnabled)
+@if (ViewBag.ErrorMessage != null)
 {
-<div class="text-info">
-    <p>
-        <b>Exception:</b> @Model.Exception.Message<br />
-        <b>Controller:</b> @Model.ControllerName<br />
-        <b>Action:</b> @Model.ActionName
-    </p>
-    <div style="overflow:scroll">
-        <pre>
+<section id="main-content">
+    <p class="text-danger">@ViewBag.ErrorMessage</p>
+</section>
+}
+else if (Model != null && HttpContext.Current.IsDebuggingEnabled)
+{
+<section id="main-content">
+    <div class="text-info">
+        <p>
+            <b>Exception:</b> @Model.Exception.Message<br />
+            <b>Controller:</b> @Model.ControllerName<br />
+            <b>Action:</b> @Model.ActionName
+        </p>
+        <div style="overflow: scroll">
+            <pre>
 @Model.Exception.StackTrace
-        </pre>
+            </pre>
+        </div>
     </div>
-</div>
+</section>
 }
