--- a/MvvmTools.Core/Views/OptionsSolutionAndProjectsUserControl.xaml
+++ b/MvvmTools.Core/Views/OptionsSolutionAndProjectsUserControl.xaml
@@ -6,7 +6,7 @@
              xmlns:viewModels="clr-namespace:MvvmTools.Core.ViewModels"
              xmlns:views="clr-namespace:MvvmTools.Core.Views"
              x:Name="MyUserControl"
-             d:DataContext="{d:DesignInstance viewModels:OptionsUserControlViewModel,
+             d:DataContext="{d:DesignInstance viewModels:OptionsViewModel,
                                               IsDesignTimeCreatable=False}"
              d:DesignHeight="300"
              d:DesignWidth="300"
